--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <section class="promo-slider">
         <h2 class="visually-hidden">Популярные товары.</h2>
         <ol class="slider-pagination">
-          <li class="slider-pagination-item">
+          <li class="slider-pagination-item slider-pagination-item-current">
             <p class="slider-item-number">01</p>
             <button class="slider-arrow-button slider-prev" type="button">
               <span class="visually-hidden">Назад.</span>
@@ -136,16 +136,20 @@
             <button class="slider-arrow-button slider-next" type="button">
               <span class="visually-hidden">Вперед.</span>
             </button>
-            <h3 class="slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
-            <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
-              лазером, замаскированным под стандартную камеру.</p>
-            <a class="main-page-button" href="#">Подробнее</a>
-            <dl class="slider-item-features">
-              <dt class="slider-item-feature-name">Дальность полета</dt>
-              <dd class="slider-item-feature-value">800 м</dd>
-              <dt class="slider-item-feature-name">Радиус поражения</dt>
-              <dd class="slider-item-feature-value">50 м</dd>
-            </dl>
+              <h3 class="slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
+              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
+                лазером, замаскированным под стандартную камеру.</p>
+              <a class="main-page-button slider-description-button" href="#">Подробнее</a>
+              <dl class="slider-item-features">
+                <div class="feauters-wrapper">
+                  <dt class="slider-item-feature-name">Дальность полета</dt>
+                <dd class="slider-item-feature-value">800 м</dd>
+                </div>
+                <div class="feauters-wrapper">
+                  <dt class="slider-item-feature-name">Радиус поражения</dt>
+                <dd class="slider-item-feature-value">50 м</dd>
+                </div>
+              </dl>
             <ol class="slider-navigation">
               <li class="slider-navigation-item">
                 <button class="slider-button slider-active" type="button">
@@ -177,7 +181,7 @@
             <h3 class="slider-item-title">Худеем правильно!</h3>
             <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
               занятия и соблюдать диету.</p>
-            <a class="main-page-button" href="#">Подробнее</a>
+            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
             <dl class="slider-item-features">
               <dt class="slider-item-feature-name">Без подзарядки</dt>
               <dd class="slider-item-feature-value">48 часов</dd>
@@ -213,14 +217,20 @@
             <h3 class="slider-item-title">Делай селфи, как Бен Стиллер!</h3>
             <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-            <a class="main-page-button" href="#">Подробнее</a>
+            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
             <dl class="slider-item-features">
-              <dt class="slider-item-feature-name">Длина палки</dt>
-              <dd class="slider-item-feature-value">8,5 метров</dd>
-              <dt class="slider-item-feature-name">Вес палки</dt>
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Длина палки</dt>
+                <dd class="slider-item-feature-value">8,5 метров</dd>
+              </div>
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Вес палки</dt>
               <dd class="slider-item-feature-value">5 кг</dd>
-              <dt class="slider-item-feature-name">Материал</dt>
+              </div>
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Материал</dt>
               <dd class="slider-item-feature-value">Карбон</dd>
+              </div>
             </dl>
             <ol class="slider-navigation">
               <li class="slider-navigation-item">
