--- a/index.html
+++ b/index.html
@@ -183,8 +183,10 @@
               занятия и соблюдать диету.</p>
             <a class="main-page-button slider-description-button" href="#">Подробнее</a>
             <dl class="slider-item-features">
-              <dt class="slider-item-feature-name">Без подзарядки</dt>
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Без подзарядки</dt>
               <dd class="slider-item-feature-value">48 часов</dd>
+              </div>
             </dl>
             <ol class="slider-navigation">
               <li class="slider-navigation-item">
@@ -221,7 +223,7 @@
             <dl class="slider-item-features">
               <div class="feauters-wrapper">
                 <dt class="slider-item-feature-name">Длина палки</dt>
-                <dd class="slider-item-feature-value">8,5 метров</dd>
+                <dd class="slider-item-feature-value">8,5 м</dd>
               </div>
               <div class="feauters-wrapper">
                 <dt class="slider-item-feature-name">Вес палки</dt>
