--- a/index.html
+++ b/index.html
@@ -136,20 +136,20 @@
             <button class="slider-arrow-button slider-next" type="button">
               <span class="visually-hidden">Вперед.</span>
             </button>
-              <h3 class="slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
-              <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
-                лазером, замаскированным под стандартную камеру.</p>
-              <a class="main-page-button slider-description-button" href="#">Подробнее</a>
-              <dl class="slider-item-features">
-                <div class="feauters-wrapper">
-                  <dt class="slider-item-feature-name">Дальность полета</dt>
+            <h3 class="slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
+            <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
+              лазером, замаскированным под стандартную камеру.</p>
+            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
+            <dl class="slider-item-features">
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Дальность полета</dt>
                 <dd class="slider-item-feature-value">800 м</dd>
-                </div>
-                <div class="feauters-wrapper">
-                  <dt class="slider-item-feature-name">Радиус поражения</dt>
+              </div>
+              <div class="feauters-wrapper">
+                <dt class="slider-item-feature-name">Радиус поражения</dt>
                 <dd class="slider-item-feature-value">50 м</dd>
-                </div>
-              </dl>
+              </div>
+            </dl>
             <ol class="slider-navigation">
               <li class="slider-navigation-item">
                 <button class="slider-button slider-button-current" type="button">
@@ -185,7 +185,7 @@
             <dl class="slider-item-features">
               <div class="feauters-wrapper">
                 <dt class="slider-item-feature-name">Без подзарядки</dt>
-              <dd class="slider-item-feature-value">48 часов</dd>
+                <dd class="slider-item-feature-value">48 часов</dd>
               </div>
             </dl>
             <ol class="slider-navigation">
@@ -227,11 +227,11 @@
               </div>
               <div class="feauters-wrapper">
                 <dt class="slider-item-feature-name">Вес палки</dt>
-              <dd class="slider-item-feature-value">5 кг</dd>
+                <dd class="slider-item-feature-value">5 кг</dd>
               </div>
               <div class="feauters-wrapper">
                 <dt class="slider-item-feature-name">Материал</dt>
-              <dd class="slider-item-feature-value">Карбон</dd>
+                <dd class="slider-item-feature-value">Карбон</dd>
               </div>
             </dl>
             <ol class="slider-navigation">
@@ -258,22 +258,40 @@
         <h2 class="visually-hidden">Категории товаров.</h2>
         <ul class="products-list">
           <li class="products-item">
-            <a class="products-item-link products-virtual" href="#">Виртуальная реальность</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-virtual-image"></div>
+              Виртуальная реальность
+            </a>
           </li>
           <li class="products-item">
-            <a class="products-item-link products-monopod" href="#">Моноподы для селфи</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-monopod-image"></div>
+              Моноподы для&nbsp;селфи
+            </a>
           </li>
           <li class="products-item">
-            <a class="products-item-link products-action" href="#">Экшн-камеры</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-action-image"></div>
+              Экшн-камеры
+            </a>
           </li>
           <li class="products-item">
-            <a class="products-item-link products-bracelet" href="#">Фитнес-браслеты</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-bracelet-image"></div>
+              Фитнес-браслеты
+            </a>
           </li>
           <li class="products-item">
-            <a class="products-item-link products-watch" href="#">Умные часы</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-watch-image"></div>
+              Умные часы
+            </a>
           </li>
           <li class="products-item">
-            <a class="products-item-link products-quadrocopter" href="#">Квадрокоптеры</a>
+            <a class="products-item-link" href="#">
+              <div class="catalog-image products-quadcopter-image"></div>
+              Квадрокоптеры
+            </a>
           </li>
         </ul>
       </section>
@@ -293,19 +311,28 @@
           </ul>
           <ul class="advantages-description-list">
             <li class="advantages-description-item advantages-description-visible">
-              <h3 class="advantages-title">Доставка</h3>
-              <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду
-                совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              <div class="advantages-description-wrapper">
+                <h3 class="advantages-title">Доставка</h3>
+                <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+                  совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              </div>
+              <div class="delivery-logo"></div>
             </li>
             <li class="advantages-description-item advantages-description-hidden">
-              <h3 class="advantages-title">Гарантия</h3>
-              <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас сгорит дом —
-                не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+              <div class="advantages-description-wrapper">
+                <h3 class="advantages-title">Гарантия</h3>
+                <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас сгорит дом —
+                  не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+              </div>
+              <div class="guarantee-logo"></div>
             </li>
             <li class="advantages-description-item advantages-description-hidden">
-              <h3 class="advantages-title">Кредит</h3>
-              <p class="advantages-description">Залезть в долговую яму стало проще! Кредитные консультанты
-                подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+              <div class="advantages-description-wrapper">
+                <h3 class="advantages-title">Кредит</h3>
+                <p class="advantages-description">Залезть в долговую яму стало проще! Кредитные консультанты
+                  подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+              </div>
+              <div class="credit-logo"></div>
             </li>
           </ul>
         </div>
