--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <p class="slider-item-number">01</p>
             <img class="stock-image" src="images/index/slider-drone.png" width="560" height="560"
               alt="Квадрокоптер, оснащенный лазером.">
-            <h3 class="slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
+            <h3 class="main-title slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
             <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
               лазером, замаскированным под стандартную камеру.</p>
             <a class="main-page-button slider-description-button" href="#">Подробнее</a>
@@ -172,7 +172,7 @@
             <p class="slider-item-number">02</p>
             <img class="stock-image" src="images/index/slider-fitness-bracelets.png" width="560" height="560"
               alt="Фитнес-браслет.">
-            <h3 class="slider-item-title">Худеем правильно!</h3>
+            <h3 class="main-title slider-item-title">Худеем правильно!</h3>
             <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
               занятия и соблюдать диету.</p>
             <a class="main-page-button slider-description-button" href="#">Подробнее</a>
@@ -204,7 +204,7 @@
             <p class="slider-item-number">03</p>
             <img class="stock-image" src="images/index/slider-selfie-stick.png" width="560" height="560"
               alt="Палка для селфи.">
-            <h3 class="slider-item-title">Делай селфи, как Бен Стиллер!</h3>
+            <h3 class="main-title slider-item-title">Делай селфи, как Бен Стиллер!</h3>
             <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a class="main-page-button slider-description-button" href="#">Подробнее</a>
@@ -302,7 +302,7 @@
           <ul class="advantages-description-list">
             <li class="advantages-description-item advantages-description-current">
               <div class="advantages-description-wrapper">
-                <h3 class="advantages-title">Доставка</h3>
+                <h3 class="main-title advantages-title">Доставка</h3>
                 <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду
                   совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на ваш этаж.</p>
               </div>
@@ -310,7 +310,7 @@
             </li>
             <li class="advantages-description-item advantages-description-hidden">
               <div class="advantages-description-wrapper">
-                <h3 class="advantages-title">Гарантия</h3>
+                <h3 class="main-title advantages-title">Гарантия</h3>
                 <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас сгорит дом —
                   не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
               </div>
@@ -318,7 +318,7 @@
             </li>
             <li class="advantages-description-item advantages-description-hidden">
               <div class="advantages-description-wrapper">
-                <h3 class="advantages-title">Кредит</h3>
+                <h3 class="main-title advantages-title">Кредит</h3>
                 <p class="advantages-description">Залезть в долговую яму стало проще! Кредитные консультанты
                   подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
               </div>
@@ -329,12 +329,14 @@
       </section>
       <section class="delivery">
         <a class="delivery-box" href="#">
+          <div class="delivery-truck-image"></div>
           <p class="delivery-description">Доставим редкий товар под заказ</p>
+          <div class="delivery-info"></div>
         </a>
       </section>
       <div class="wrapper-about-contacts">
         <section class="about">
-          <h2 class="about-title">О нас</h2>
+          <h2 class="main-title about-title">О нас</h2>
           <p class="about-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в
             каждом из нас.</p>
           <p class="about-description">Мы можем доставить ваш товар в самые отдалённые уголки России
@@ -344,10 +346,10 @@
             <li class="company-item">СДИК</li>
             <li class="company-item">ТоксБерри</li>
           </ul>
-          <a class="main-page-button" href="#">Подробнее о нас</a>
+          <a class="main-page-button about-link" href="#">Подробнее о нас</a>
         </section>
         <section class="contacts">
-          <h2 class="contacts-title">Контакты</h2>
+          <h2 class="main-title contacts-title">Контакты</h2>
           <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете
             проверить работоспособность покупки.</p>
           <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
@@ -360,12 +362,12 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <a class="main-page-button" href="#">Напишите нам</a>
+          <a class="main-page-button contacts-link" href="#">Напишите нам</a>
         </section>
       </div>
       <section class="subscribe">
         <div class="subscribe-wrapper">
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <h2 class="main-title subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Еженедельный дайджест с обзорами новинок, длительными
             тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
         </div>
@@ -374,7 +376,7 @@
             <label class="subscribe-label">
               <input class="subscribe-field" type="email" placeholder="Ваш e-mail">
             </label>
-            <button class="button button-subscribe" type="submit">Подписаться</button>
+            <button class="button-subscribe" type="submit">Подписаться</button>
           </form>
           <span class="subscribe-comment">Это бесплатно</span>
         </div>
