--- a/index.html
+++ b/index.html
@@ -125,122 +125,130 @@
       <h1 class="visually-hidden">Интернет-магазин гаджетов с оригинальным дизайном.</h1>
       <section class="promo-slider">
         <h2 class="visually-hidden">Популярные товары.</h2>
-        <button class="prev-button" type="button">
-          <span class="visually-hidden">Посмотреть предыдущий слайд.</span>
-        </button>
-        <button class="next-button" type="button">
-          <span class="visually-hidden">Посмотреть следующий слайд.</span>
-        </button>
-        <ol class="slider-pagination">
-          <li class="slider-pagination-item slider-pagination-item-current">
-            <p class="slider-item-number">01</p>
-            <img class="stock-image" src="images/index/slider-drone.png" width="560" height="560"
-              alt="Квадрокоптер, оснащенный лазером.">
-            <h3 class="main-title slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
-            <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
-              лазером, замаскированным под стандартную камеру.</p>
-            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
-            <dl class="slider-item-features">
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Дальность полета</dt>
-                <dd class="slider-item-feature-value">800 м</dd>
+        <div class="slider-container">
+          <button class="prev-button" type="button">
+            <span class="visually-hidden">Посмотреть предыдущий слайд.</span>
+          </button>
+          <button class="next-button" type="button">
+            <span class="visually-hidden">Посмотреть следующий слайд.</span>
+          </button>
+          <ol class="slider-pagination">
+            <li class="slider-pagination-item">
+              <div class="slider">
+                <p class="slider-item-number">01</p>
+                <img class="stock-image" src="images/index/slider-drone.png" width="560" height="560"
+                  alt="Квадрокоптер, оснащенный лазером.">
+                <h3 class="main-title slider-item-title">Порхает как бабочка, жалит как пчела!</h3>
+                <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
+                  лазером, замаскированным под стандартную камеру.</p>
+                <a class="main-page-button slider-description-button" href="#">Подробнее</a>
+                <dl class="slider-item-features">
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Дальность полета</dt>
+                    <dd class="slider-item-feature-value">800 м</dd>
+                  </div>
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Радиус поражения</dt>
+                    <dd class="slider-item-feature-value">50 м</dd>
+                  </div>
+                </dl>
+                <ol class="slider-navigation">
+                  <li class="slider-navigation-item">
+                    <button class="slider-button slider-button-current" type="button">
+                      <span class="visually-hidden">1 слайд</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">2 слайд</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">3 слайд</span>
+                    </button>
+                  </li>
+                </ol>
               </div>
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Радиус поражения</dt>
-                <dd class="slider-item-feature-value">50 м</dd>
+            </li>
+            <li class="slider-pagination-item">
+              <div class="slider">
+                <p class="slider-item-number">02</p>
+                <img class="stock-image" src="images/index/slider-fitness-bracelets.png" width="560" height="560"
+                  alt="Фитнес-браслет.">
+                <h3 class="main-title slider-item-title">Худеем правильно!</h3>
+                <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
+                  занятия и соблюдать диету.</p>
+                <a class="main-page-button slider-description-button" href="#">Подробнее</a>
+                <dl class="slider-item-features">
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Без подзарядки</dt>
+                    <dd class="slider-item-feature-value">48 часов</dd>
+                  </div>
+                </dl>
+                <ol class="slider-navigation">
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">Текущий слайд.</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button slider-button-current" type="button">
+                      <span class="visually-hidden">Слайд 2.</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">Слайд 3.</span>
+                    </button>
+                  </li>
+                </ol>
               </div>
-            </dl>
-            <ol class="slider-navigation">
-              <li class="slider-navigation-item">
-                <button class="slider-button slider-button-current" type="button">
-                  <span class="visually-hidden">1 слайд</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">2 слайд</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">3 слайд</span>
-                </button>
-              </li>
-            </ol>
-          </li>
-          <li class="slider-pagination-item">
-            <p class="slider-item-number">02</p>
-            <img class="stock-image" src="images/index/slider-fitness-bracelets.png" width="560" height="560"
-              alt="Фитнес-браслет.">
-            <h3 class="main-title slider-item-title">Худеем правильно!</h3>
-            <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
-              занятия и соблюдать диету.</p>
-            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
-            <dl class="slider-item-features">
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Без подзарядки</dt>
-                <dd class="slider-item-feature-value">48 часов</dd>
+            </li>
+            <li class="slider-pagination-item">
+              <div class="slider">
+                <p class="slider-item-number">03</p>
+                <img class="stock-image" src="images/index/slider-selfie-stick.png" width="560" height="560"
+                  alt="Палка для селфи.">
+                <h3 class="main-title slider-item-title">Делай селфи, как Бен Стиллер!</h3>
+                <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.
+                  Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                <a class="main-page-button slider-description-button" href="#">Подробнее</a>
+                <dl class="slider-item-features">
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Длина палки</dt>
+                    <dd class="slider-item-feature-value">8,5 м</dd>
+                  </div>
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Вес палки</dt>
+                    <dd class="slider-item-feature-value">5 кг</dd>
+                  </div>
+                  <div class="feauters-wrapper">
+                    <dt class="slider-item-feature-name">Материал</dt>
+                    <dd class="slider-item-feature-value">Карбон</dd>
+                  </div>
+                </dl>
+                <ol class="slider-navigation">
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">1 слайд</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button" type="button">
+                      <span class="visually-hidden">2 слайд</span>
+                    </button>
+                  </li>
+                  <li class="slider-navigation-item">
+                    <button class="slider-button slider-button-current" type="button">
+                      <span class="visually-hidden">3 слайд</span>
+                    </button>
+                  </li>
+                </ol>
               </div>
-            </dl>
-            <ol class="slider-navigation">
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">Текущий слайд.</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button slider-button-current" type="button">
-                  <span class="visually-hidden">Слайд 2.</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">Слайд 3.</span>
-                </button>
-              </li>
-            </ol>
-          </li>
-          <li class="slider-pagination-item">
-            <p class="slider-item-number">03</p>
-            <img class="stock-image" src="images/index/slider-selfie-stick.png" width="560" height="560"
-              alt="Палка для селфи.">
-            <h3 class="main-title slider-item-title">Делай селфи, как Бен Стиллер!</h3>
-            <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.
-              Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-            <a class="main-page-button slider-description-button" href="#">Подробнее</a>
-            <dl class="slider-item-features">
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Длина палки</dt>
-                <dd class="slider-item-feature-value">8,5 м</dd>
-              </div>
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Вес палки</dt>
-                <dd class="slider-item-feature-value">5 кг</dd>
-              </div>
-              <div class="feauters-wrapper">
-                <dt class="slider-item-feature-name">Материал</dt>
-                <dd class="slider-item-feature-value">Карбон</dd>
-              </div>
-            </dl>
-            <ol class="slider-navigation">
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">1 слайд</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button" type="button">
-                  <span class="visually-hidden">2 слайд</span>
-                </button>
-              </li>
-              <li class="slider-navigation-item">
-                <button class="slider-button slider-button-current" type="button">
-                  <span class="visually-hidden">3 слайд</span>
-                </button>
-              </li>
-            </ol>
-          </li>
-        </ol>
+            </li>
+          </ol>
+        </div>
       </section>
       <section class="products">
         <h2 class="visually-hidden">Категории товаров.</h2>
@@ -328,6 +336,7 @@
         </div>
       </section>
       <section class="delivery">
+        <h2 class="visually-hidden">Доставка.</h2>
         <a class="delivery-box" href="#">
           <div class="delivery-truck-image"></div>
           <p class="delivery-description">Доставим редкий товар под заказ</p>
