--- a/index.html
+++ b/index.html
@@ -297,13 +297,13 @@
           <div class="advantages-list-wrapper">
             <ul class="advantages-list">
               <li class="advantages-button-item">
-                <a class="main-page-button advantages-button advantage-current" href="#">Доставка</a>
+                <button class="main-page-button advantages-button advantage-current" type="button">Доставка</button>
               </li>
               <li class="advantages-button-item">
-                <a class="main-page-button advantages-button" href="#">Гарантия</a>
+                <button class="main-page-button advantages-button" type="button">Гарантия</button>
               </li>
               <li class="advantages-button-item">
-                <a class="main-page-button advantages-button" href="#">Кредит</a>
+                <button class="main-page-button advantages-button" type="button">Кредит</button>
               </li>
             </ul>
           </div>
@@ -402,29 +402,58 @@
         </address>
         <ul class="footer-navigation-list">
           <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">Доставка</a>
+            <a class="footer-navigation-link" href="#">Доставка</a>
           </li>
           <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">Гарантия</a>
+            <a class="footer-navigation-link" href="#">Гарантия</a>
           </li>
           <li class="footer-navigation-item">
-            <a class="footer-navigation-link" href="">Контакты</a>
+            <a class="footer-navigation-link" href="#">Контакты</a>
           </li>
         </ul>
-        <a class="footer-phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-phone-link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+        <div class="footer-align-wrapper">
+          <span class="devider"></span>
+        </div>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a href="https://t.me/htmlacademy">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" fill="none" viewBox="0 0 14 12">
+                <g clip-path="url(#a)">
+                  <path fill="#444"
+                    d="M12.44.07.62 4.63c-.8.33-.8.78-.14.98l3.03.94 7.02-4.43c.33-.2.64-.09.39.13l-5.7 5.13-.2 3.13c.3 0 .44-.14.61-.3l1.48-1.44 3.06 2.27c.57.31.97.15 1.12-.53l2-9.48c.21-.83-.3-1.2-.85-.96Z" />
+                </g>
+                <defs>
+                  <clipPath id="a">
+                    <path fill="#fff" d="M0 0h14v12H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
               <span class="visually-hidden">Телеграм.</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="https://www.youtube.com/user/htmlacademyru">
+            <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" fill="none" viewBox="0 0 16 11">
+                <g clip-path="url(#a)">
+                  <path fill="#444"
+                    d="M15.67 1.67c-.1-.32-.27-.61-.51-.84-.25-.24-.56-.41-.9-.5C13.01 0 8 0 8 0 5.9-.02 3.8.08 1.74.32 1.4.4 1.1.58.84.82c-.24.24-.42.53-.51.85A19.4 19.4 0 0 0 0 5.34C0 6.56.1 7.79.33 9c.09.32.27.61.51.85.25.23.56.4.9.5 1.27.32 6.26.32 6.26.32 2.09.02 4.18-.08 6.26-.31.34-.09.65-.26.9-.5.24-.23.42-.52.5-.84.24-1.21.35-2.44.34-3.67.02-1.23-.1-2.46-.33-3.68ZM6.4 7.62V3.05l4.18 2.29L6.4 7.62Z" />
+                </g>
+                <defs>
+                  <clipPath id="a">
+                    <path fill="#fff" d="M0 0h16v11H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
               <span class="visually-hidden">Ютуб.</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a href="https://twitter.com/htmlacademy_ru">
+            <a class="footer-social-link" href="https://twitter.com/htmlacademy_ru">
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 15 15">
+                <path fill="#444"
+                  d="M9.7.16c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4C1 5.26-.2 2.36.8.86c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
+              </svg>
               <span class="visually-hidden">Твиттер.</span>
             </a>
           </li>
